fixed header alignment for tablet

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -6,20 +6,21 @@
 .header__logo {
   width: 173px;
   height: 33px;
-  margin: 0 907px 41px 0;
+  margin: 0 auto 41px 0;
 }
 
 @media screen and (max-width: 900px) {
   .header {
-    max-width: 320px;
+    /* max-width: 320px; */
     width: 100%;
     margin: 0;
+    text-align: center;
   }
 
   .header__logo {
     width: 126px;
     height: 24px;
-    padding: 28px 167px 32px 27px;
+    padding: 28px 27px;
     margin: 0;
   }
 }
